# pytkdocs

./: .copier-answers.yml  .cruft.json  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  coverage.ini  duties.py  gen_ref_nav.py  index.html  load.py  mkdocs.yml  mypy.ini  nodes.txt  objects.inv  pyproject.toml  schema.json  sitemap.xml  tasks.py  visitor.py
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  testing.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_2747c01e5320e4c7_cli_py.html  d_2747c01e5320e4c7_loader_py.html  d_2747c01e5320e4c7_objects_py.html  d_2747c01e5320e4c7_properties_py.html  d_2747c01e5320e4c7_serializer_py.html  d_57093e5aa6fa0ef1___init___py.html  d_57093e5aa6fa0ef1_test_annotations_py.html  d_57093e5aa6fa0ef1_test_attributes_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_loader_py.html  d_a44f0ac069e85531_test_objects_py.html  d_a44f0ac069e85531_test_properties_py.html  d_a44f0ac069e85531_test_serializer_py.html  d_ccd6818ca7bebb6d___init___py.html  d_ccd6818ca7bebb6d_test_google_py.html  d_ccd6818ca7bebb6d_test_numpy_py.html  d_ccd6818ca7bebb6d_test_restructured_text_py.html  d_d9e03bf1e1fb8158_base_py.html  d_d9e03bf1e1fb8158_google_py.html  d_d9e03bf1e1fb8158_markdown_py.html  d_d9e03bf1e1fb8158_numpy_py.html  d_d9e03bf1e1fb8158_restructured_text_py.html  d_f735a248890dbd46_attributes_py.html  function_index.html  index.html  src_pytkdocs_cli_py.html  src_pytkdocs_loader_py.html  src_pytkdocs_objects_py.html  src_pytkdocs_parsers___init___py.html  src_pytkdocs_parsers_attributes_py.html  src_pytkdocs_parsers_docstrings___init___py.html  src_pytkdocs_parsers_docstrings_base_py.html  src_pytkdocs_parsers_docstrings_google_py.html  src_pytkdocs_parsers_docstrings_numpy_py.html  src_pytkdocs_parsers_docstrings_restructured_text_py.html  src_pytkdocs_properties_py.html  src_pytkdocs_serializer_py.html  (+121 more)
credits/: index.html
developers/test_suite/__init__/: index.html
developers/test_suite/conftest/: index.html
developers/test_suite/fixtures/inheriting_enum_Enum/: index.html
developers/test_suite/fixtures/inheriting_typing_NamedTuple/: index.html
developers/test_suite/fixtures/nested_class/: index.html
developers/test_suite/fixtures/no_contents/: index.html
developers/test_suite/fixtures/parsing/: index.html
developers/test_suite/fixtures/pkg1/: index.html
developers/test_suite/fixtures/real_path/: index.html
developers/test_suite/fixtures/the_package/: index.html
developers/test_suite/test_cli/: index.html
developers/test_suite/test_loader/: index.html
developers/test_suite/test_objects/: index.html
developers/test_suite/test_parsers/test_attributes/: index.html
developers/test_suite/test_parsers/test_docstrings/: index.html
developers/test_suite/test_properties/: index.html
developers/test_suite/test_serializer/: index.html
docs/.overrides/partials/: comments.html
docs/developers/test_suite/: __init__.md  conftest.md  test_cli.md  test_loader.md  test_objects.md  test_properties.md  test_serializer.md
docs/developers/test_suite/fixtures/: inheriting_enum_Enum.md  inheriting_typing_NamedTuple.md  nested_class.md  no_contents.md  parsing.md  pkg1.md  real_path.md  the_package.md
docs/reference/: __init__.md  __main__.md  cli.md  loader.md  objects.md  properties.md  serializer.md
docs/reference/parsers/: __init__.md  attributes.md  docstrings.md
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/__main__/: index.html
reference/cli/: index.html
reference/loader/: index.html
reference/objects/: index.html
reference/parsers/__init__/: index.html
reference/parsers/attributes/: index.html
reference/parsers/docstrings/: index.html
reference/properties/: index.html
reference/pytkdocs/: index.html
reference/pytkdocs/cli/: index.html
reference/pytkdocs/debug/: index.html
reference/pytkdocs/loader/: index.html
reference/pytkdocs/objects/: index.html
reference/pytkdocs/parsers/: index.html
reference/pytkdocs/properties/: index.html
reference/pytkdocs/serializer/: index.html
reference/serializer/: index.html
scripts/: gen-credits-data.py  gen-readme-data.py  gen_credits.py  get_annotations.py  make  setup.sh
scripts/templates/: CREDITS.md  README.md
search/: search_index.json
src/pydocload/: __main__.py  objects.py  properties.py
src/pydocload/parsers/: attributes.py  docstrings.py
src/pytkdocs/: __init__.py  __main__.py  cli.py  collections.py  dataclasses.py  debug.py  json.py  loader.py  nobjects.py  objects.py  parser.py  properties.py  serializer.py  t1.py  t2.py  visitor.py
src/pytkdocs/extensions/: base.py  demo.py
src/pytkdocs/parsers/: attributes.py  docstrings.py
tests/: __init__.py  conftest.py  test_cli.py  test_loader.py  test_objects.py  test_properties.py  test_serializer.py  test_visitor.py
tests/fixtures/: asyncio.py  cached_properties.py  corrupt_output.py  cython.pyx  dataclass.py  decorated_function.py  django.py  docstring_attributes_section.py  dynamic_members.py  final.py  first_line_class_docstring.py  inherited_members.py  inherited_properties.py  inheriting_enum_Enum.py  inheriting_typing_NamedTuple.py  marshmallow.py  method_descriptor.py  module_imports.py  module_imports_from.py  nested_class.py  pydantic.py  unwrap_getattr_raises.py  wrapped_objects.py
tests/fixtures/parsing/: annotations.py  annotations.txt  attributes.py  docstrings.py
tests/fixtures/real_path/: module_a.py  module_b.py
tests/fixtures/the_package/: __init__.py  the_module.py
tests/test_parsers/: __init__.py  test_annotations.py  test_attributes.py  test_docstrings.py
tests/test_parsers/test_docstrings/: __init__.py  test_google.py  test_numpy.py  test_restructured_text.py
(+34 files in other folders)
