[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pytkdocs"
description = "Load Python objects documentation."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "source", "signature", "docs"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "astunparse>=1.6; python_version < '3.9'",
    "cached-property>=1.5; python_version < '3.8'",
    "typing-extensions>=3.7; python_version < '3.8'",
]

[project.optional-dependencies]
numpy-style = [
    "docstring_parser>=0.7",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/pytkdocs"
Documentation = "https://mkdocstrings.github.io/pytkdocs"
Changelog = "https://mkdocstrings.github.io/pytkdocs/changelog"
Repository = "https://github.com/mkdocstrings/pytkdocs"
Issues = "https://github.com/mkdocstrings/pytkdocs/issues"
Discussions = "https://github.com/mkdocstrings/pytkdocs/discussions"
Gitter = "https://gitter.im/mkdocstrings/pytkdocs"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
pytkdocs = "pytkdocs.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "docstring-parser>=0.7",
    "django>=3.2",
    "marshmallow>=3.13",
    "pydantic>=1.8",
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
